data/all_generated_tests/raw_wast_tests/unreachable_EdgeCaseFailuresinbr_table_1633.wast
;; 4. **Test Description:**    - **Edge Case:** `br_table` with non-uniform label targets and `unreachable`.    - **Constraint Checked:** Check handling of mixed valid target labels and `unreachable`.    - **Details:** Set `br_table` targets to a mix of labels and indices leading to a trap; confirm `unreachable` invokes a trap when out-of-bounds or misplaced indices are selected.

(assert_invalid
  (module (func $br_table-edge-case
    (block
      (block
        (block
          (br_table 0 1 2 (i32.const 3))
          (unreachable)
        )
      )
    )
  ))
  "br_table with out-of-bounds targets causes a trap"
)